fix: Sửa lỗi Hitsound và Storyboard
- Cập nhật URL cho submodule `easing`.
- Thay đổi hình ảnh trong `README.md`.
- Thêm liên kết mới vào `credit.txt`.
- Cập nhật commit hash cho subproject trong thư mục `easing`.
- Thay đổi mức âm lượng mặc định trong `config.h`.
- Giảm `MAX_CHANNELS` từ `512` xuống `64` trong `config.h`.
- Thêm cấu trúc ngoại lệ mới trong `exceptions.h` để xử lý lỗi âm thanh và texture.
- Cải tiến các lớp `Bus<Music>` và `Bus<Effect>` trong `buses.h`.
- Cập nhật phương thức trong `memory.h` và `render.hpp` để cải thiện chức năng.
- Thêm các tệp âm thanh Ogg mới cho hiệu ứng âm thanh.
- Cập nhật nhiều tệp mã nguồn để cải thiện logic gameplay và quản lý âm thanh.

Ghi chú: Các thay đổi này nhằm nâng cao trải nghiệm âm thanh và cải thiện cấu trúc mã nguồn.

--- a/the-floor-is-rhythm.vcxproj
+++ b/the-floor-is-rhythm.vcxproj
@@ -220,12 +220,24 @@
     <ClCompile Include="dependencies\easing\src\easing.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="src\structures\events\event\event.cpp" />
-    <ClCompile Include="src\structures\game\event.cpp" />
-    <ClCompile Include="src\structures\render\object\animation.cpp" />
-    <ClCompile Include="src\structures\render\layer\storyboard.cpp" />
-    <ClCompile Include="src\structures\events\action\audio.cpp" />
-    <ClCompile Include="src\structures\events\event\playing.cpp" />
+    <ClCompile Include="src\structures\events\event\event.cpp">
+          <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\structures\game\event.cpp">
+          <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\structures\render\object\animation.cpp">
+          <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\structures\render\layer\storyboard.cpp">
+          <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\structures\events\action\audio.cpp">
+          <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="src\structures\events\event\playing.cpp">
+          <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
+    </ClCompile>
     <ClCompile Include="src\structures\screen\gameplay\keystroke.cpp">
       <ObjectFileName>$(IntDir)%(RelativeDir)%(Filename).obj</ObjectFileName>
     </ClCompile>
